--- a/AppBolivar/Src/scDataAntigua.fx.yaml
+++ b/AppBolivar/Src/scDataAntigua.fx.yaml
@@ -2496,3 +2496,198 @@ scDataAntigua As screen:
             Y: =36
             ZIndex: =15
 
+        ContainerHistoria As groupContainer.manualLayoutContainer:
+            DropShadow: =DropShadow.Regular
+            Fill: =RGBA(255, 255, 255, 1)
+            Height: =576
+            Visible: =_varData = "historia"
+            Width: =1160
+            X: =20
+            Y: =144
+            ZIndex: =16
+
+            galRecords As gallery.galleryVertical:
+                DelayItemLoading: =true
+                Height: =517
+                Items: ='public.medical_center_anteriores_records'
+                Layout: =Layout.Vertical
+                LoadingSpinner: =LoadingSpinner.Data
+                ShowScrollbar: =false
+                TemplateSize: =60
+                Width: =1160
+                Y: =59
+                ZIndex: =1
+
+                Container52_1 As groupContainer.horizontalAutoLayoutContainer:
+                    Height: =60
+                    LayoutMode: =LayoutMode.Auto
+                    Width: =1150
+                    ZIndex: =1
+
+                    Container55_1 As groupContainer.verticalAutoLayoutContainer:
+                        FillPortions: =0
+                        LayoutDirection: =LayoutDirection.Vertical
+                        LayoutMinHeight: =60
+                        LayoutMinWidth: =250
+                        LayoutMode: =LayoutMode.Auto
+                        Width: =285
+                        ZIndex: =1
+
+                        Label95_20 As label:
+                            Align: =Align.Center
+                            AlignInContainer: =AlignInContainer.Stretch
+                            Color: =RGBA(95, 106, 146, 1)
+                            FillPortions: =1
+                            Font: =Font.'Segoe UI'
+                            PaddingBottom: =0
+                            PaddingLeft: =0
+                            PaddingRight: =0
+                            PaddingTop: =0
+                            Size: =15
+                            Text: =ThisItem.'Protocol Name'
+                            Wrap: =false
+                            ZIndex: =1
+
+                    Container56_1 As groupContainer.verticalAutoLayoutContainer:
+                        FillPortions: =0
+                        LayoutDirection: =LayoutDirection.Vertical
+                        LayoutMinHeight: =60
+                        LayoutMinWidth: =250
+                        LayoutMode: =LayoutMode.Auto
+                        Width: =285
+                        ZIndex: =2
+
+                        Label95_21 As label:
+                            Align: =Align.Center
+                            AlignInContainer: =AlignInContainer.Stretch
+                            Color: =RGBA(95, 106, 146, 1)
+                            FillPortions: =1
+                            Font: =Font.'Segoe UI'
+                            PaddingBottom: =0
+                            PaddingLeft: =0
+                            PaddingRight: =0
+                            PaddingTop: =0
+                            Size: =15
+                            Text: =ThisItem.'Group Name'
+                            Wrap: =false
+                            ZIndex: =1
+
+                    Container57_1 As groupContainer.verticalAutoLayoutContainer:
+                        FillPortions: =0
+                        LayoutDirection: =LayoutDirection.Vertical
+                        LayoutMinHeight: =60
+                        LayoutMinWidth: =250
+                        LayoutMode: =LayoutMode.Auto
+                        Width: =285
+                        ZIndex: =3
+
+                        Label95_22 As label:
+                            Align: =Align.Center
+                            AlignInContainer: =AlignInContainer.Stretch
+                            Color: =RGBA(95, 106, 146, 1)
+                            FillPortions: =1
+                            Font: =Font.'Segoe UI'
+                            PaddingBottom: =0
+                            PaddingLeft: =0
+                            PaddingRight: =0
+                            PaddingTop: =0
+                            Size: =15
+                            Text: =ThisItem.'Element Name'
+                            Wrap: =false
+                            ZIndex: =1
+
+                    Container60_1 As groupContainer.verticalAutoLayoutContainer:
+                        FillPortions: =0
+                        LayoutDirection: =LayoutDirection.Vertical
+                        LayoutMinHeight: =60
+                        LayoutMinWidth: =250
+                        LayoutMode: =LayoutMode.Auto
+                        Width: =285
+                        ZIndex: =4
+
+                        Label95_23 As label:
+                            Align: =Align.Center
+                            AlignInContainer: =AlignInContainer.Stretch
+                            Color: =RGBA(95, 106, 146, 1)
+                            FillPortions: =1
+                            Font: =Font.'Segoe UI'
+                            PaddingBottom: =0
+                            PaddingLeft: =0
+                            PaddingRight: =0
+                            PaddingTop: =0
+                            Size: =15
+                            Text: =ThisItem.'Element Value'
+                            Wrap: =false
+                            ZIndex: =1
+
+            Label95_27 As label:
+                Align: =Align.Center
+                Font: =Font.'Segoe UI'
+                Height: =24
+                PaddingBottom: =0
+                PaddingLeft: =0
+                PaddingRight: =0
+                PaddingTop: =0
+                Size: =18
+                Text: ="Nombre"
+                Width: =100
+                Wrap: =false
+                X: =92
+                Y: =20
+                ZIndex: =2
+
+            Label95_28 As label:
+                Align: =Align.Center
+                Font: =Font.'Segoe UI'
+                Height: =24
+                PaddingBottom: =0
+                PaddingLeft: =0
+                PaddingRight: =0
+                PaddingTop: =0
+                Size: =18
+                Text: ="Grupo"
+                Width: =80
+                Wrap: =false
+                X: =379
+                Y: =20
+                ZIndex: =3
+
+            Label95_29 As label:
+                Align: =Align.Center
+                Font: =Font.'Segoe UI'
+                Height: =24
+                PaddingBottom: =0
+                PaddingLeft: =0
+                PaddingRight: =0
+                PaddingTop: =0
+                Size: =18
+                Text: ="Elemento"
+                Wrap: =false
+                X: =637
+                Y: =20
+                ZIndex: =4
+
+            Label95_30 As label:
+                Align: =Align.Center
+                Font: =Font.'Segoe UI'
+                Height: =24
+                PaddingBottom: =0
+                PaddingLeft: =0
+                PaddingRight: =0
+                PaddingTop: =0
+                Size: =18
+                Text: ="Valor de Elemento"
+                Width: =250
+                Wrap: =false
+                X: =857
+                Y: =20
+                ZIndex: =5
+
+            Rectangle74_1 As rectangle:
+                Fill: =RGBA(0, 0, 0, 1)
+                Height: =2
+                Width: =1128
+                X: =16
+                Y: =58
+                ZIndex: =9
+
