--- a/AppBolivar/Src/scDataAntigua.fx.yaml
+++ b/AppBolivar/Src/scDataAntigua.fx.yaml
@@ -1571,7 +1571,7 @@ scDataAntigua As screen:
             Fill: =RGBA(0, 0, 0, 0.25)
             Height: =768
             OnSelect: |-
-                =UpdateContext({_varpoRecords: false})
+                =UpdateContext({_varpoRecords: false});UpdateContext({_varData: "citas"});
             Visible: =_varpoRecords
             Width: =1366
             ZIndex: =89
@@ -1671,7 +1671,7 @@ scDataAntigua As screen:
                 Height: =24
                 Icon: =Icon.Cancel
                 OnSelect: |-
-                    =UpdateContext({_varpoRecords: false})
+                    =UpdateContext({_varpoRecords: false});UpdateContext({_varData: "citas"});
                 Width: =24
                 X: =1156
                 Y: =20
@@ -1717,7 +1717,7 @@ scDataAntigua As screen:
                 galCitas As gallery.galleryVertical:
                     DelayItemLoading: =true
                     Height: =517
-                    Items: ='public.medical_center_anteriores_visits'
+                    Items: =Filter('public.medical_center_anteriores_visits', 'Patient id' = recordsvalue.id)
                     Layout: =Layout.Vertical
                     LoadingSpinner: =LoadingSpinner.Data
                     ShowScrollbar: =false
@@ -2138,7 +2138,7 @@ scDataAntigua As screen:
                 galRecords As gallery.galleryVertical:
                     DelayItemLoading: =true
                     Height: =517
-                    Items: ='public.medical_center_anteriores_records'
+                    Items: =Filter('public.medical_center_anteriores_records', 'Patient id' = recordsvalue.id)
                     Layout: =Layout.Vertical
                     LoadingSpinner: =LoadingSpinner.Data
                     ShowScrollbar: =false
